Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}

{{ $NEXT }}

2.005001  2014-01-13 21:43:59+01:00 Europe/Vienna
 - Fixed test failures with JSON 2.90 (RT#90188, thanks Samuel Kaufman!)
 - Fixed generate_rs to set model to contents of stash->{class} if present
   (thanks Alex Howarth)
 - Use Catalyst's http method matching for REST instead of
   ActionRole, whose feature went into core in 5.90013, and
   MatchRequestMethod, whose feature went into 5.90020
 - Documentation improvements

2.004004 2012-11-21T12:20:41Z Europe/Vienna
 - Fixed test failures in t/[rest,rpc]/item.t on newer HTTP::Message
   versions
 - Don't wrap the SQLite test schema DDL queries in a transaction to
   suppress DBIx::Class warnings
 - Added diagnostic messages to tests that trigger DBIx::Class warnings

2.004003 2011-12-19T14:41:59Z Europe/Vienna
 - Fixed test failure in generic.t with Moose > 2.02

2.004002 2011-10-24T15:48:55Z Europe/Vienna
 - Use the column accessor instead of set_column when inserting new objects
 - Allow setting the result_class to undef to prevent the usage of
   HashRefInflator

2.004001 2011-08-19T16:17:53Z Europe/Vienna
 - Changed stored_model and stored_result_source attributes to methods for
   ACCEPT_CONTEXT/Catalyst::Component::InstancePerContext compatibility

2.003002 2011-05-09T12:30:01Z Europe/Vienna
 - Added has_errors method
 - Fixed tests to succeed with newer DBIx::Class and Moose versions
 - Fixed controller instantiation failures with Moose 2 in relation to
   prefetch

2.003001 2011-02-16T17:52:37Z Europe/Vienna
 - Use JSON instead of JSON::Any to get rid of the CPAN Testers failures
   when only JSON::Syck is available

2.002004 2011-01-13T19:22:20Z Europe/Vienna
 - Renamed Visitor to Validator::Visitor to conform with
   Data::DPath::Validator and moved it into a separate file
 - Fixed failure because of Data::DPath >=0.41 by not using
   MooseX::Role::BuildInstanceOf for the validator attributes (RT#64673)