@@ -6,6 +6,7 @@ author = Alexander Hartmaier <abraxxa@cpan.org>
 author = Florian Ragwitz <rafl@debian.org>
 author = Oleg Kostyuk <cub.uanic@gmail.com>
 author = Samuel Kaufman <sam@socialflow.com>
+author = Mike Wisener <xmikew@32ths.com>
 license = Perl_5
 copyright_holder = Luke Saunders, Nicholas Perez, Alexander Hartmaier, et al.
 
