@@ -1,6 +1,8 @@
 Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 
 {{ $NEXT }}
+ - Allow creating multiple related objects when updating or creating new
+   records (RT#65168)
 
 2.005001  2014-01-13 21:43:59+01:00 Europe/Vienna
  - Fixed test failures with JSON 2.90 (RT#90188, thanks Samuel Kaufman!)
